<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"  >

    <LinearLayout
        android:padding="3dp"
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <ImageButton android:id="@+id/l_rink_refresh" 
            android:src="@drawable/ic_btn_refresh"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:layout_weight="1"  
            android:layout_alignParentLeft="true" />

        <ImageButton android:id="@+id/l_rink_favorites"
            android:src="@drawable/ic_tab_favorites_disabled" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <ImageButton android:id="@+id/l_rink_mapmode" 
            android:src="@android:drawable/ic_dialog_map"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentRight="true" />
    </LinearLayout>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_above="@id/buttons"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
                
		android:padding="6dp">


		<ImageView android:id="@+id/l_rink_kind_id"
		    android:src="@drawable/ic_rink_skating_3"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginRight="6dp"
            android:layout_gravity="fill_vertical" 
            android:gravity="center_vertical"
			android:layout_above="@+id/l_rink_condition"
			android:layout_alignParentTop="true" />

		<TextView android:id="@+id/l_rink_name" 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
            android:textAppearance="?android:attr/textAppearanceLarge"
		    android:layout_toRightOf="@+id/l_rink_kind_id"
		    android:layout_alignParentTop="true" 
		    android:singleLine="true" />

		<TextView android:id="@+id/l_rink_desc" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_toRightOf="@+id/l_rink_kind_id"
			android:layout_below="@+id/l_rink_name"
			android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorSecondary"
			/>

		<TextView android:id="@+id/l_rink_condition"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:gravity="left"
			android:text="@string/rink_details_conditions" 
			android:layout_below="@+id/l_rink_desc" />

        <ImageView android:id="@+id/l_rink_is_cleared"
            android:src="@drawable/ic_surface_cleared_off"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_gravity="right" 
            android:gravity="center"
            android:layout_below="@+id/l_rink_condition"
            android:layout_marginRight="6dp"
            android:focusable="true"
            android:clickable="true" />

		<ImageView android:id="@+id/l_rink_is_flooded"
		    android:src="@drawable/ic_surface_flooded_off"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:gravity="center"
			android:layout_below="@+id/l_rink_condition"
			android:layout_toRightOf="@+id/l_rink_is_cleared"
			android:layout_marginRight="6dp"
			android:focusable="true"
            android:clickable="true" />
			
        <ImageView android:id="@+id/l_rink_is_resurfaced"
            android:src="@drawable/ic_surface_resurfaced_off"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_gravity="right" 
            android:gravity="center"
            android:layout_below="@+id/l_rink_condition"
            android:layout_toRightOf="@+id/l_rink_is_flooded"
            android:layout_marginRight="6dp"
            android:focusable="true"
            android:clickable="true" />

        <TextView android:id="@+id/l_rink_surface" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_toRightOf="@+id/l_rink_is_resurfaced" 
            android:gravity="center_vertical"
            android:text="@string/rink_details_surface"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_alignBottom="@+id/l_rink_is_resurfaced"
            android:layout_below="@+id/l_rink_condition" />

        <ImageButton android:id="@+id/l_rink_call" android:src="@android:drawable/sym_action_call"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="18dp" android:layout_alignParentRight="true"
            android:layout_marginLeft="6dp"
            android:layout_below="@+id/l_rink_surface"
            android:linksClickable="true"
            android:autoLink="phone"
            android:focusable="true" />

		<TextView android:id="@+id/l_park_name" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginTop="18dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/rink_details_park_name"
			android:layout_toLeftOf="@+id/l_rink_call"
			android:layout_below="@+id/l_rink_surface" />

		<TextView android:id="@+id/l_park_address"
			android:layout_width="fill_parent"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="?android:attr/textColorSecondary"
			android:layout_height="wrap_content" android:text="@string/rink_details_park_address"
            android:layout_toLeftOf="@+id/l_rink_call"
			android:layout_below="@+id/l_park_name" />

		<TextView android:id="@+id/l_park_phone" 
			android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"
			android:text="@string/rink_details_park_phone" android:layout_below="@+id/l_park_address" />
			
<!--
            <TextView android:id="@+id/l_park_is_chalet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="KEY_PARKS_IS_CHALET" />
            <TextView
            android:id="@+id/l_park_is_caravan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="KEY_PARKS_IS_CARAVAN" />
        -->
		<TextView android:id="@+id/l_borough_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="bottom" 
			android:layout_marginTop="18dp"
			android:text="@string/rink_details_borough_name"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_below="@+id/l_park_phone"
			 />

		<TextView android:id="@+id/l_borough_remarks"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"
			android:layout_below="@+id/l_borough_name" />

		<TextView android:id="@+id/l_borough_updated_at"
			android:layout_width="fill_parent"
			android:layout_marginTop="18dp"
			android:layout_alignWithParentIfMissing="true"
			android:layout_height="wrap_content" android:text="@string/rink_details_borough_updated_at"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorTertiary"
			android:layout_below="@+id/l_borough_remarks" />
			
        <TextView android:id="@+id/l_user_updated_at"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/rink_details_user_updated_at"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorTertiary"
            android:layout_below="@+id/l_borough_updated_at" />

	</RelativeLayout>
</ScrollView>
</RelativeLayout>
